add_library (${ERT_DIAMETERTOOLS_TARGET_NAME} STATIC
        ${CMAKE_CURRENT_LIST_DIR}/functions.cpp
)

target_include_directories(${ERT_DIAMETERTOOLS_TARGET_NAME}
  PUBLIC ${ERT_DIAMETERTOOLS_INCLUDE_BUILD_DIR}
)

target_link_libraries(${ERT_DIAMETERTOOLS_TARGET_NAME}
PRIVATE
-static
)

install(TARGETS ${ERT_DIAMETERTOOLS_TARGET_NAME}
        ARCHIVE DESTINATION lib/ert)
